--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
 </head>
 
-<body>
+<body style=" font-family: Theinhardt, Helvetica, Arial;  ">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #00B5E2; font-family: Theinhardt, Helvetica, Arial; color: #ffffff; ">
+  <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #00B5E2; color: #ffffff;>
     <div class="container">
       <a class="navbar-brand" href="index.html">Logo Here</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto" style="color: #ffffff">
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
